--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width,initial-scale=1" /> 
   <meta charset="utf-8" />
   <title>Zeeshan Abid</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" />
