--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Zeehsan's Portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zeeshan's Portfolio</title>
+    <link rel="preload" href="/fonts/ubuntu-v21-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
   </head>
   <body>
     <div id="root"></div>
